# blecon-oem-device-firmware

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/action-build-app/: Dockerfile  action.yml  entrypoint.sh
.github/actions/action-check-license/: action.yml  entrypoint.sh
.github/actions/action-get-version/: action.yml  entrypoint.sh
.github/workflows/: apps-build-and-test.yml  apps-release.yml
apps/minimal/: CMakeLists.txt  README.md  pm_static_nrf52840dk_nrf52840.yml  prj.conf  sysbuild.conf
apps/minimal-app/: CMakeLists.txt  Kconfig  README.md
apps/minimal-app/memfault_config/: memfault_metrics_heartbeat_config.def
apps/minimal-app/src/: main.c
apps/minimal/boards/: k7p54l_nrf54l15_cpuapp.conf  nrf52840dk_nrf52840.conf
apps/minimal/config/: memfault_platform_config.h
apps/minimal/src/: main.c
apps/minimal/sysbuild/mcuboot/: prj.conf
apps/minimal/sysbuild/mcuboot/boards/: k7p54l_nrf54l15_cpuapp.conf  k7p54l_nrf54l15_cpuapp.overlay  kkm_s5_bcn.conf
apps/proximity-spotter/: Kconfig  README.md
apps/proximity-spotter/src/: main.c
apps/sensor-default/: CMakeLists.txt  Kconfig  README.md  prj.conf  sysbuild.conf
apps/sensor-default/boards/: kkm_s5_bcn.conf  nrf52840dk_nrf52840.overlay
apps/sensor-default/configuration/kkm_s5_bcn_nrf52833/: app.overlay  blecon.conf  pm_static.yml  prj.conf  sysbuild.conf
apps/sensor-default/configuration/kkm_s5_bcn_nrf52833/images/mcuboot/: app.overlay  ota-key.pem  prj.conf
apps/sensor-default/configuration/mkbnl02sn_nrf54l15_cpuapp/: app.overlay  blecon.conf  pm_static.yml  prj.conf
apps/sensor-default/configuration/mokosmart_l02s_bcn_nrf54l15_cpuapp/: app.overlay  prj.conf
apps/sensor-default/configuration/mokosmart_l02s_bcn_nrf54l15_cpuapp/images/mcuboot/: prj.conf
apps/sensor-default/configuration/nrf52840dk_nrf52840/: blecon.conf  prj.conf
apps/sensor-default/configuration/nrf52840dk_nrf52840/images/mcuboot/: app.overlay  ota-key.pem  prj.conf
apps/sensor-default/src/: main.c
apps/sensor-default/sysbuild/: CMakeLists.txt
apps/sensor-memfault/: CMakeLists.txt  README.md  ci_build.json  prj.conf  sysbuild.conf
apps/sensor-memfault/boards/: kkm_s5_bcn.conf  kkm_s5_bcn.overlay  nrf52840dk_nrf52840.overlay
apps/sensor-memfault/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h
apps/sensor-memfault/src/: main.c
apps/sensor-memfault/sysbuild/mcuboot/: prj.conf
apps/sensor-ml/: CMakeLists.txt  Kconfig  README.md  ci_build.json
apps/sensor-ml/configuration/mkbnl02sn_nrf54l15_cpuapp/: app.overlay  prj.conf
apps/sensor-ml/configuration/mokosmart_l02s_bcn_nrf54l15_cpuapp/: sysbuild.conf
apps/sensor-ml/configuration/mokosmart_l02s_bcn_nrf54l15_cpuapp/images/mcuboot/: ota-key.pem
apps/sensor-ml/src/: inference.cpp  inference.h  main.c
apps/sensor-ml/src/motion-recognition/: README.txt
apps/sensor-ml/src/motion-recognition/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
apps/sensor-ml/src/motion-recognition/tflite-model/: tflite_learn_35_compiled.cpp  tflite_learn_35_compiled.h
cmake/: app.cmake
keys/: README.md  ota-key_kkm_k7p54l_bcn_nrf54l15_cpuapp.pem
lib/: CMakeLists.txt
lib/battery/: CMakeLists.txt
lib/led/: CMakeLists.txt
lib/motion/: CMakeLists.txt
lib/ota/: CMakeLists.txt
lib/power_switch/: CMakeLists.txt
scripts/: license_check.sh
zephyr/: module.yml
(+37 files in other folders)
